Added random words

--- a/Wordle/style.css
+++ b/Wordle/style.css
@@ -11,6 +11,7 @@
     display: grid;
     grid-template-columns: auto auto auto auto auto;
     max-width: 20%;
+    align-content: center;
     margin: auto;
 }
 
